wip[time]: Add time module

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,3 +6,9 @@ add_executable(
     xlog_test.c
 )
 target_link_libraries(xlog_test PRIVATE xbox::xbox)
+
+add_executable(
+    xtime_test
+    xtime_test.c
+)
+target_link_libraries(xtime_test PRIVATE xbox::xbox)
