--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
-out
-build
-compile_commands.json
-DS_Store
-.cache
-.vscode
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+/bin/
+/out/
+/build/
+
+# Test binary
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# VSCode
+/.vscode/
+
+# Vim
+/compile_commands.json
+/.cache/
+*.swap
+
+# MacOS
+.DS_Store
+
+.fpm
+
+# Misc
+*.log
+*.tmp
+*.rotate[0-9]*
+
